# mhttp

./: .travis.yml  CMakeLists.txt  README.md  bitbucket-pipelines.yml  cleandist.sh  configure  generateVersion.sh  main.cpp
samples/: README.md
samples/hello/: CMakeLists.txt  README.md
samples/hello/src/: api.cpp  api.hpp
samples/hello/www/: index.html
samples/longpchat/: CMakeLists.txt  README.md
samples/longpchat/.hg/: dirstate  undo.dirstate
samples/longpchat/.hg/cache/: branch2-served  rbc-revs-v1
samples/longpchat/.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache  undo.phaseroots
samples/longpchat/.hg/store/data/: _c_make_lists.txt.i
samples/longpchat/.hg/store/data/src/: api.cpp.i  api.hpp.i  msgservice.hpp.i
samples/longpchat/.hg/store/data/www/: index.html.i  jquery.js.i
samples/longpchat/src/: api.cpp  api.hpp  msgservice.hpp
samples/longpchat/www/: index.html
src/: hhelpers.cpp  hhelpers.hpp  http.cpp  http.hpp  http_memorysessionstorage.cpp  http_memorysessionstorage.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_session.cpp  http_session.hpp  http_sessionstorage.cpp  http_sessionstorage.hpp  tpnet.cpp  tpnet.hpp
tests/: unit_hhelpers.cpp  unit_http.cpp  unit_session.cpp  units.cpp
